# project-notes-studio

./: .gitignore  Cargo.toml  LICENSE  README.md
android-build/: .gitignore  README.md  build-android.ps1  init-android.ps1  release-signing.properties.template
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  constants.js  i18n.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: IconButton.jsx  Modal.jsx  ProjectsPage.jsx  SettingsPage.jsx  TopBar.jsx
frontend/src/styles/: app-base.css  app-sections.css
frontend/src/utils/: state.js
legacy/eframe-prototype/: Cargo.toml
legacy/eframe-prototype/src/: main.rs  models.rs  storage.rs  theme.rs
site/: index.html  package-lock.json  package.json  vite.config.js
site/public/: robots.txt  site.webmanifest  sitemap.xml
site/src/: App.css  App.jsx  index.css
src/: main.rs
