[package]
name = "project-notes-studio"
version = "0.3.1"
description = "Project Notes Studio desktop app for managing projects, notes, and action steps."
authors = ["BYxarek"]
license = "MIT"
repository = "https://github.com/BYxarek/project-notes-studio"
edition = "2024"
rust-version = "1.93.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.3"
