[package]
name = "project-notes-studio"
version = "0.2.5"
description = "Project Notes Studio desktop app for managing projects, notes, and action steps."
authors = ["BYxarek"]
license = "MIT"
repository = "https://github.com/BYxarek/project-notes-studio"
edition = "2024"
rust-version = "1.93.1"

[dependencies]
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
